Reduce download link to 1.15rem font size at screen size <768px.
Resolves issue #6 to make download link smaller on devices up to 767px.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -116,12 +116,23 @@ hr {
   text-decoration: underline;
 }
 
+.navbar {
+  font-size: 1.5rem;
+}
+
 .navbar .download-link {
   margin-right: 1em;
-  font-size: 1.5rem;
 }
 
 .section-sub-header {
   color: #9c9696;
   text-align: center;
+}
+
+@media (max-width: 767px) {
+  .download-link{font-size: 1.15rem;}
+}
+
+@media (min-width: 768px) {
+  .download-link{font-size: 1.5rem;}
 }
